<resources>
    <string name="app_name">家校在线</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Exit">再按一次退出程序</string>
    <string name="login_tag">登陆</string>
    <string name="more">更多</string>
    <string name="xiangce">相册</string>
    <string name="tips">提示</string>
    <string name="sendnotice">保存成功！是否以短信的形式通知家长？</string>
    <string name="sendfile">发送短信失败</string>
    <string name="sendsucc">成功发送短信</string>
    <string name="delectmag">删除信息？</string>
    <string name="logout">您将退出当前账号</string>
    <string name="login">正在登陆</string>
    <string name="login_ok">登陆成功</string>
    <string name="children">children</string>
    <string name="connect">正在加载信息</string>
    <string name="updata">正在上传信息</string>
    <string name="call">拨打电话：</string>
    <string name="save">保存</string>
    <string name="change">切换</string>
    <string name="saveed">保存成功</string>
    <string name="connectfild">网络连接失败</string>
    <string name="getfild">获取信息失败</string>
    <string name="geted">获取信息成功</string>
    <string name="delected">删除成功</string>
    <string name="delect">删除</string>
    <string name="count0">没有数据更新</string>
    <string name="checked">验证成功</string>
    <string name="add">添加</string>
    <string name="added">添加成功</string>
    <string name="uped">上传成功</string>
    <string name="Okay">确定</string>
    <string name="cancel">取消</string>
    <string name="caidan">菜单</string>
    <string name="teacher">班主任</string>
    <string name="tag">请登录查看真实数据</string>

    <string name="shili">示例</string>

    <string name="login_student">学生</string>
    <string name="login_teacher">老师</string>
    <string name="login_parents">家长</string>
    <string name="login_name">姓名</string>
    <string name="login_phone">手机号码</string>
    <string name="login_send">发送验证码</string>
    <string name="login_key">验证码</string>
    <string name="login_testing">验证</string>
    <string name="login_msg">登陆类型绑定错误，请联系我们：0898-65916454</string>
    <string name="login_toast1">请选择您的身份</string>
    <string name="login_toast2">请输入您的姓名</string>
    <string name="login_toast3">请输入正确的手机号码</string>
    <string name="login_toast4">验证码错误</string>
    <string name="login_sends">验证码已经发送</string>
    <string name="main_tag">t12</string>
    <string name="main_first">首页</string>
    <string name="main_set">设置</string>
    <string name="syl_tag">课程表</string>
    <string name="syl_item1">减少一天</string>
    <string name="syl_item2">增加一天</string>
    <string name="syl_item3">减少一节课</string>
    <string name="syl_item4">增加一节课</string>

    <string name="syl_1">一</string>
    <string name="syl_2">二</string>
    <string name="syl_3">三</string>
    <string name="syl_4">四</string>
    <string name="syl_5">五</string>
    <string name="syl_6">六</string>
    <string name="syl_7">日</string>
    <string name="syl_0">空</string>
    <string name="syl_01">1</string>
    <string name="syl_02">2</string>
    <string name="syl_03">3</string>
    <string name="syl_04">4</string>
    <string name="syl_05">5</string>
    <string name="syl_06">6</string>
    <string name="syl_07">7</string>
    <string name="syl_08">8</string>
    <string name="syl_09">9</string>
    <string name="leave_tag">请假条</string>
    <string name="leave_send">提交</string>
    <string name="leave_head">尊敬的老师：</string>

    <string name="leavelist_tag">请假条记录</string>
    <string name="set_tag">设置</string>
    <string name="set_item0">联系我们</string>
    <string name="set_item01">绑定老师号码</string>

    <string name="path_tag">名次曲线图</string>

    <string name="set_item11">学校信息</string>
    <string name="set_item12">学生名单</string>
    <string name="set_item13">通讯录</string>
    <string name="set_login">登陆</string>
    <string name="set_logout">退出当前账户</string>
    <string name="school_tag">选择城市学校</string>
    <string name="school_item1_hint">省份：</string>
    <string name="school_item2_hint">学校：</string>
    <string name="school_item3_hint">班级：</string>
    <string name="school_toast0">保存成功！</string>
    <string name="school_toast1">请填写省份</string>
    <string name="school_toast2">请填写学校</string>
    <string name="school_toast3">请填写班级</string>

    <string name="addgrade_tag">录入分数</string>

    <string name="province_tag">选择城市</string>
    <string name="province_tags">选择学校</string>

    <string name="student_tag">学生名单</string>
    <string name="student_dialog">权限菜单</string>
    <string name="student_dialog1">无管理权限</string>
    <string name="student_dialog2">一级权限</string>
    <string name="student_dialog3">二级权限</string>
    <string name="student_dialog4">解除绑定</string>
    <string name="student_dialog5">编号：</string>
    <string name="student_dialog6">姓名：</string>
    <string name="student_dialog7">班级名称：</string>
    <string name="student_dialog8">删除学生</string>

    <string name="addresslist_tag">通讯录</string>
    <string name="addresslist_par">家长</string>
    
    <string name="about_tag">联系我们</string>
    <string name="about_item1">公司</string>
    <string name="about_item2">电话</string>
    <string name="about_item3">QQ</string>
    <string name="about_item4">邮箱</string>
    <string name="about_item5">网址</string>
    <string name="about_item1s">海南纽依兰网络科技有限公司</string>
    <string name="about_item2s">0898-65916454</string>
    <string name="about_item3s">316344445</string>
    <string name="about_item4s">316344445@qq.com</string>
    <string name="about_item5s">http://www.newera98.com</string>

    <string name="boundstudent_tag">绑定学生</string>
    
    <string name="boundstudentphone">成功绑定学生手机</string>
    
    <string name="bound_tag">绑定</string>
    <string name="boundphone_tag">绑定老师手机</string>
    <string name="boundphone_item2">保存</string>
    <string name="boundphone_dialog">老师手机</string>
    <string name="bound_status0">未验证</string>
    <string name="bound_status1">等待验证</string>
    <string name="bound_status2">验证成功</string>

    <string name="grade_tag">成绩单</string>

    <string name="gradeitem_tag">选择考试</string>

    <string name="gradelist_item0">排序方式</string>
    <string name="gradelist_item1">按序号</string>
    <string name="gradelist_item2">按分数</string>
    <string name="gradelist_item3">录入成绩</string>
    <string name="gradelist_item4">上传成绩单</string>
    <string name="gradelist_item5">取消</string>


    <string name="notice_tag">公告列表</string>
    
    <string name="absent_tag">缺席情况</string>
    
    <string name="honor_tag">荣誉榜</string>
    <string name="addhonor_tag">发布荣誉</string>
    
    <string name="addleave_tag">发布请假条</string>
    
    <string name="addabsent_tag">发布缺席情况</string>
    
    <string name="addhomework_tag">发布作业</string>
    

    <string name="addnotice_tag">发布公告</string>
    <string name="addnotice_item1">标题或日期</string>
    <string name="addnotice_item2">内容</string>

    <string name="addcourse_tag">添加课程</string>
    
    <string name="addexam_dialog">请输入考试名称</string>
    
    <string name="nowchildren">当前孩子为：</string>

    <string name="check_tag">验证</string>
    <string name="check_check">通过验证</string>

    <string name="homework_tag">作业情况</string>
    
    <string name="boundsend">已申请绑定</string>
    
    

    <string name="syl_day">,1,2,3,4,5,6,7,8,9</string>
    <string name="syl_weeek"> ,一,二,三,四,五,六,日</string>
    <string name="syl_null">空</string>
    <string name="syl_max">已添加到最大课程</string>
    <string name="syl_min">已减少到最小课程</string>
    
    <string name="gradecontent_item1">本次成绩</string>
    <string name="gradecontent_item2">成绩</string>
    <string name="gradecontent_item3">平均分</string>
    <string name="gradecontent_item4">排名</string>
    <string name="gradecontent_item5">全班情况</string>
    <string name="gradecontent_item6">60分以下 </string>
    <string name="gradecontent_item7">60-69 </string>
    <string name="gradecontent_item8">70-79 </string>
    <string name="gradecontent_item9">80-89 </string>
    <string name="gradecontent_item10">90-99 </string>
    <string name="gradecontent_item11">100以上 </string>
    
    <string name="gradecontent_dialog1">名次曲线图</string>
    <string name="gradecontent_dialog2">分数分布饼图</string>

    <string name="uppic_tag">上传成绩单</string>
    <string name="uppic_select">选择图片</string>
    <string name="uppic_try">获取失败，请重新选择</string>


    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="new_series">New series</string>
    <string name="add_values">Add values to the chart</string>
</resources>
