<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/white"

    android:layout_height="match_parent">

    <TextView
        android:text="@string/gradelist_item0"
        android:layout_width="match_parent"
        android:gravity="center"
        android:textSize="15sp"
        android:padding="10dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/gradelist_item1"
        android:text="@string/gradelist_item1"
        android:layout_width="match_parent"
        android:gravity="center"
        android:textSize="15sp"
        android:padding="10dp"
        android:textColor="@color/blue"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray" />

    <TextView
        android:id="@+id/gradelist_item2"
        android:text="@string/gradelist_item2"
        android:layout_width="match_parent"
        android:gravity="center"
        android:textSize="15sp"
        android:padding="10dp"
        android:textColor="@color/blue"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray" />

    <TextView
        android:id="@+id/gradelist_item3"
        android:text="@string/gradelist_item3"
        android:layout_width="match_parent"
        android:gravity="center"
        android:textSize="15sp"
        android:padding="10dp"
        android:textColor="@color/blue"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray" />

    <TextView
        android:id="@+id/gradelist_item4"
        android:text="@string/gradelist_item4"
        android:layout_width="match_parent"
        android:gravity="center"
        android:textSize="15sp"
        android:padding="10dp"
        android:textColor="@color/blue"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray" />

    <TextView
        android:id="@+id/gradelist_item5"
        android:text="@string/gradelist_item5"
        android:layout_width="match_parent"
        android:gravity="center"
        android:textSize="15sp"
        android:padding="10dp"
        android:textColor="@color/blue"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray" />
</LinearLayout>