<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/white"

    android:layout_height="match_parent"
    android:padding="10dp">

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/student_dialog1"
            android:text="@string/student_dialog1"
            style="@style/student_dialog"

            android:layout_width="match_parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray" />

        <RadioButton
            android:id="@+id/student_dialog2"
            android:text="@string/student_dialog2"
            style="@style/student_dialog"
            android:layout_width="match_parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray" />

        <RadioButton
            android:id="@+id/student_dialog4"
            android:text="@string/student_dialog4"
            style="@style/student_dialog"
            android:layout_width="match_parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray" />
    </RadioGroup>


</LinearLayout>