<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/white"

    android:layout_height="match_parent">

    <TextView
        android:id="@+id/gradecontent_dialog1"
        android:textColor="@color/blue"
        android:textSize="18sp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/gradecontent_dialog1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray" />

    <TextView
        android:id="@+id/gradecontent_dialog2"
        android:textColor="@color/blue"
        android:textSize="18sp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/gradecontent_dialog2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray" />

    <TextView
        android:id="@+id/gradecontent_dialog3"
        android:textColor="@color/blue"
        android:textSize="18sp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray" />
</LinearLayout>